Fix contrast, post dates.

--- a/src/assets/style-v21.css
+++ b/src/assets/style-v21.css
@@ -46,8 +46,12 @@ h1, h2, h3, h4, h5 {
   margin-top: 0.25em;
 }
 
-.meta {
-  opacity: 0.5;
+postamble {
+  margin-top: 4vw;
+}
+
+.post-navigation {
+  margin-top: 4vw;
 }
 
 p, li {
@@ -117,7 +121,6 @@ nav > a {
 
 footer a {
   text-decoration: none;
-  color: #999;
 }
 
 .content {
